--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "description": "learning throught build. ",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server.js"
   },
   "author": "Samir Neupane",
   "license": "ISC",
@@ -17,6 +16,7 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.1.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1"
   }
